# azimuth

./: .gitignore  README.md  azimuth.py  pyproject.toml
azimuth/: calculate_azimuth.py
tests/: test_calculate_azimuth.py
