[tool.poetry]
name = "azimuth"
version = "0.1.0"
description = ""
authors = ["jmurrah <jacobhmurrah@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
astral = "^3.2"
python-dateutil = "^2.9.0.post0"
pandas = "^2.2.2"
matplotlib = "^3.8.4"


[tool.poetry.scripts]
azimuth = "azimuth.calculate_azimuth:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
