[tool.poetry]
name = "azimuth"
version = "0.1.0"
description = ""
authors = ["jmurrah <jacobhmurrah@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
astral = "^3.2"
python-dateutil = "^2.9.0.post0"
pytest = "^8.1.1"

[tool.poetry.scripts]
azimuth = "azimuth.calculate_azimuth:main"

[tool.poetry.group.dev.dependencies]
black = "^24.4.0"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
