[tool.poetry]
name = "azimuth"
version = "0.1.0"
description = ""
authors = ["jmurrah <jacobhmurrah@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
astral = "^3.2"
python-dateutil = "^2.9.0.post0"

[tool.poetry.scripts]
azimuth = "azimuth.calculate_azimuth:main"

[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"
coverage = "^7.4.4"
pytest = "^8.1.1"
ruff = "^0.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
